--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Delete old versions
         uses: actions/delete-package-versions@v5
         with:
-          package-name: 'test-package'
+          package-name: 'discord_bot'
           package-type: 'container'
           min-versions-to-keep: 5
           delete-only-untagged-versions: 'true'
