--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-discord.py==2.4.0
+discord.py==2.5.2
 aiomysql==0.2.0
 requests==2.32.3
 urllib3==2.3.0
 six==1.17.0
 cryptography==45.0.2
+SQLAlchemy~=2.0.41
+alembic~=1.16.4
