--- a/.github/workflows/python-linting.yml
+++ b/.github/workflows/python-linting.yml
@@ -9,6 +9,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_USER: ${{ secrets.DB_USER }}
+      token: ${{ secrets.TOKEN }}
+      waifuit: ${{ secrets.WAIFUIT }}
+      APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
