--- a/.github/workflows/python-linting.yml
+++ b/.github/workflows/python-linting.yml
@@ -36,10 +36,22 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=. --cov-report=xml --cov-report=term
+          pytest --cov=. --cov-report=xml --cov-report=html --cov-report=term --junitxml=pytest-report.xml
 
-      - name: Upload coverage report
+      - name: Upload coverage XML report
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-report
+          name: coverage-xml
           path: coverage.xml
+
+      - name: Upload coverage HTML report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-html
+          path: htmlcov/
+
+      - name: Upload pytest results
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-report
+          path: pytest-report.xml
