Refactor: * coverage via deepsource

--- a/.github/workflows/python-linting.yml
+++ b/.github/workflows/python-linting.yml
@@ -38,6 +38,13 @@ jobs:
         run: |
           pytest --cov=. --cov-report=xml --cov-report=html --cov-report=term --junitxml=pytest-report.xml
 
+      - name: Report test coverage to DeepSource
+        uses: deepsourcelabs/test-coverage-action@master
+        with:
+          key: python
+          coverage-file: coverage.xml
+          dsn: ${{ secrets.DEEPSOURCE_DSN }}
+
       - name: Upload coverage XML report
         uses: actions/upload-artifact@v4
         with:
