--- a/.github/workflows/python-linting.yml
+++ b/.github/workflows/python-linting.yml
@@ -38,12 +38,13 @@ jobs:
         run: |
           pytest --cov=. --cov-report=xml --cov-report=html --cov-report=term --junitxml=pytest-report.xml
 
-      - name: Report test coverage to DeepSource
-        uses: deepsourcelabs/test-coverage-action@master
-        with:
-          key: python
-          coverage-file: coverage.xml
-          dsn: ${{ secrets.DEEPSOURCE_DSN }}
+      - name: Roprt result to DeepSource
+        run: |
+          curl https://deepsource.io/cli | sh
+          ./bin/deepsource analyze --analyzer test-coverage --key python --value-file ./path/to/report
+
+        env:
+          DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
 
       - name: Upload coverage XML report
         uses: actions/upload-artifact@v4
